пра-а-а-а-а-а-а-вки багов! тысячи их